// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mqs/react-server-components components <InputSelect /> renders 1`] = `
<DocumentFragment>
  <select
    class="select select-primary select-md test"
    data-testid="InputSelect"
  >
    <option>
      One
    </option>
    <option>
      Two
    </option>
    <option>
      Three
    </option>
  </select>
</DocumentFragment>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputSelect Input Select Color Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        accent
      </span>
    </label>
    <select
      className="select select-bordered select-accent select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        error
      </span>
    </label>
    <select
      className="select select-bordered select-error select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        ghost
      </span>
    </label>
    <select
      className="select select-bordered select-ghost select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        info
      </span>
    </label>
    <select
      className="select select-bordered select-info select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        primary
      </span>
    </label>
    <select
      className="select select-bordered select-primary select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        secondary
      </span>
    </label>
    <select
      className="select select-bordered select-secondary select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        success
      </span>
    </label>
    <select
      className="select select-bordered select-success select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        warning
      </span>
    </label>
    <select
      className="select select-bordered select-warning select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
]
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputSelect Input Select Example 1`] = `
<select
  className="select select-bordered select-primary select-md"
  data-testid="InputSelect"
>
  <option
    disabled={true}
    selected={true}
  >
    Pick your favorite Simpson
  </option>
  <option>
    Homer
  </option>
  <option>
    Marge
  </option>
  <option>
    Bart
  </option>
  <option>
    Lisa
  </option>
  <option>
    Maggie
  </option>
</select>
`;

exports[`Storyshots @mqs/react-server-components/components/Input/InputSelect Input Select Size Example 1`] = `
[
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        lg
      </span>
    </label>
    <select
      className="select select-bordered select-primary select-lg"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        md
      </span>
    </label>
    <select
      className="select select-bordered select-primary select-md"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        sm
      </span>
    </label>
    <select
      className="select select-bordered select-primary select-sm"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
  <div
    className="form-control my-4"
    data-testid="FormControl"
  >
    <label
      className="label"
      data-testid="Label"
    >
      <span
        className="label-text"
      >
        xs
      </span>
    </label>
    <select
      className="select select-bordered select-primary select-xs"
      data-testid="InputSelect"
    >
      <option
        disabled={true}
        selected={true}
      >
        Pick your favorite Simpson
      </option>
      <option>
        Homer
      </option>
      <option>
        Marge
      </option>
      <option>
        Bart
      </option>
      <option>
        Lisa
      </option>
      <option>
        Maggie
      </option>
    </select>
  </div>,
]
`;
